# review-app-scan

./: .gitignore  CODEOWNERS  NOTICE  README.md  pyproject.toml
review_app_scan/: __main__.py  review_app_scan.py
